[package]
name = "anoncreds"
version = "0.2.0-dev.2"
authors = [
    "Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>",
]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]
rust-version = "1.58"

[lib]
name = "anoncreds"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi", "logger", "zeroize"]
ffi = ["dep:ffi-support"]
zeroize = ["dep:zeroize"]
logger = ["dep:env_logger"]
vendored = ["anoncreds-clsignatures/openssl_vendored"]
wasm = ["zeroize", "wasm-bindgen", "wasm-logger", "console_error_panic_hook", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
anoncreds-clsignatures = { version = "0.2.2", default-features = false, features = ["serde"] }
bs58 = "0.4.0"
env_logger = { version = "0.9.3", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
getrandom = { version = "0.2", optional = true }
regex = "1.7.1"
serde = { version = "1.0.155", features = ["derive"] }
bitvec = { version = "1.0.1", features = ["serde"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
sha2 = "0.10.6"
thiserror = "1.0.39"
zeroize = { version = "=1.4", optional = true, features = ["zeroize_derive"] }
wasm-bindgen = { version = "0.2.84", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version="0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true}

[profile.release]
lto = true
codegen-units = 1
